Changes the teal bar in the Pumping section to the right hand side

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -191,6 +191,13 @@
   }
 }
 
+@media (min-width: 992px) {
+  .projects-section .featured-text-right {
+    padding: 0 0 0 2rem;
+    border-right: 0.5rem solid #64a19d;
+  }
+}
+
 .projects-section .project-text {
   padding: 3rem;
   font-size: 90%;
