--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -198,7 +198,7 @@
 
 @media (min-width: 992px) {
   .projects-section .featured-text-right {
-    padding: 0 0 0 2rem;
+    padding: 0 2rem 0 2rem;
     border-right: 0.5rem solid #64a19d;
   }
 }
