--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -11,7 +11,7 @@
   background-size: cover;
   h1 {
     font-family: 'Varela Round';
-    font-size: 2.5rem;
+    font-size: 8vw;
     line-height: 2.5rem;
     letter-spacing: 0.8rem;
     background: -webkit-linear-gradient(fade-out(white, 0.1), fade-out(white, 1));
