--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,6 +1,6 @@
 .about-section {
   padding-top: 10rem;
-  background: linear-gradient(to bottom, $black 0%,#{fade-out($black, .1)} 75%,#{fade-out($black, .2)} 100%);
+  background: linear-gradient(to bottom, $white 0%,#{fade-out($white, .1)} 75%,#{fade-out($white, .2)} 100%);
   p {
     margin-bottom: 5rem;
   }
