--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -14,7 +14,7 @@
     font-size: 8vw;
     line-height: 2.5rem;
     letter-spacing: 0.8rem;
-    background: -webkit-linear-gradient(fade-out(white, 0.1), fade-out(white, 1));
+    background: -webkit-linear-gradient(fade-out(text-primary, 0.1), fade-out(text-primary, 1));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
   }
