--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -18,7 +18,7 @@
   .navbar-nav {
     .nav-item {
       &:hover {
-        color: fade(primary, 80%);
+        color: fade($primary, 80%);
         outline: none;
         background-color: transparent;
       }
