Navbar Colour Change

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -54,13 +54,13 @@
     -webkit-transition: none;
     transition: none;
     padding: 2rem 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(100, 161, 157, 0.5);
   }
   #mainNav .nav-link:hover {
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(100, 161, 157, 0.75);
   }
   #mainNav .nav-link:active {
-    color: white;
+    color: #64a19d;
   }
   #mainNav.navbar-shrink {
     background-color: #fff;
